--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,7 +22,8 @@
     "react-hook-form": "^7.65.0",
     "sweetalert2": "^11.26.3",
     "tailwindcss-primeui": "^0.6.1",
-    "zod": "^4.1.12"
+    "zod": "^4.1.12",
+    "axios": "^1.5.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
